가입된 그룹피드에서 이미지, 동영상 파일 업로드 시 보여지는 view 구현, 글쓰기 기능 view 구현

--- a/src/style/partials/_custom.sass
+++ b/src/style/partials/_custom.sass
@@ -4,6 +4,16 @@
 // button:focus, 
 //   outline: none
 
+// ul
+//   margin: 0
+//   padding: 0
+// li
+//   list-style: none
+
+body
+  background: #eee
+html
+  background: #eee
 
 $bond-hover: #EC407A
 
@@ -55,6 +65,24 @@ button
 
 .feed-box
   margin-bottom: 20px
+
+.textarea-comment
+  min-height: 50px
+.btn-comment
+  height: 50px
+
+.file-box
+  padding: 20px
+  border: 1px
+  // cursor: pointer
+  width: 100%
+  background: #fff
+  border: 1px solid #b5b5b5
+  border-radius: $radius
+  font-size: 16px
+  color: #363636
+  &:hover
+    border: 1px solid $bond
 
 
 
